--- a/src/views/layout/artic.handlebars
+++ b/src/views/layout/artic.handlebars
@@ -1,5 +1,5 @@
 <h1>Articulos en stock!</h1>
-{{#each articles}}
+{{#each artic}}
 <div>
     <ul>
         <li>Nombre: {{this.titulo}}</li>
@@ -8,4 +8,4 @@
         <li>Stock: {{this.stock}}</li>
     </ul>    
 </div>
-{{/each}}  
+{{/each}}
