--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,6 @@
 <h1>Bienvenidos</h1>
 
-{{#each articles}}
+{{#each articulos}}
 <div>
     <h1>{{this.titulo}}</h1>
     <p>{{this.descripcion}}</p>
